--- a/build.gradle
+++ b/build.gradle
@@ -34,10 +34,28 @@ dependencies {
  	compile("org.springframework:spring-jdbc")
  	compile("mysql:mysql-connector-java")
  	
+ 	testCompile ("org.testng:testng:6.9.4") 
+ 	
 }
 
 test {
-    systemProperties 'property': 'value'
+	// enable TestNG support
+    useTestNG() {
+         suites 'src/test/resources/org/gradle/test-resource.xml'  
+    }
+
+  // show standard out and standard error of the test JVM(s) on the console
+  testLogging.showStandardStreams = true
+
+  // listen to events in the test execution lifecycle
+  beforeTest { descriptor ->
+     logger.lifecycle("Running test: " + descriptor)
+  }
+
+  // listen to standard out and standard error of the test JVM(s)
+  onOutput { descriptor, event ->
+     logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
+  }
 }
 
 uploadArchives {
