--- a/build.gradle
+++ b/build.gradle
@@ -33,12 +33,13 @@ dependencies {
     compile("org.apache.tomcat.embed:tomcat-embed-el")
  	compile("org.springframework:spring-jdbc")
  	compile("mysql:mysql-connector-java")
+ 	
  	compile('com.google.code.gson:gson')
  	
  	testCompile("org.springframework:spring-test")
  	testCompile("org.mockito:mockito-core")
  	testCompile ("org.testng:testng:6.9.4")
- 	 
+ 	testCompile ("junit:junit")
  	
 }
 
