--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ repositories {
 dependencies {
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    compile('org.springframework.boot:spring-boot-devtools:1.3.3.RELEASE')
+    
     compile("org.hibernate:hibernate-validator")
     compile("org.apache.tomcat.embed:tomcat-embed-el")
  	compile("org.springframework:spring-jdbc")
