--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /build/
 /bin/
 /test-output/
+.idea/
 
 .gradle/2.3/taskArtifacts/cache.properties
 
@@ -40,3 +41,23 @@
 
 
 
+
+node_modules/
+
+.idea/libraries/gradle_wrapper.xml
+
+.idea/libraries/to_do_list_0_1_0.xml
+
+.idea/libraries/ToDoList.xml
+
+.idea/modules.xml
+
+.idea/vcs.xml
+
+.checkstyle
+
+ToDoList.iml
+
+src/main/main.iml
+
+src/test/test.iml
